--- a/notes/references.bib
+++ b/notes/references.bib
@@ -29,3 +29,11 @@
   url = "https://dictionary.cambridge.org/dictionary/english/data-science",
   note = "[Accessed October 28, 2024]"
 }
+
+@article{petersen2012matrix,
+  title = {The Matrix Cookbook},
+  author = {Petersen, Kaare Brandt and Pedersen, Michael Syskind},
+  year = 2012,
+  url = "https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf",
+  note = "[Accessed November 10, 2024]"
+}
