--- a/notes/11_ls.qmd
+++ b/notes/11_ls.qmd
@@ -154,49 +154,81 @@ $$
 $$
 
 and this choice of $\beta$ defines our final learned model: $f(z;\beta^*) = x(z)^\top\beta^*$.
-
-
 <!-- 
-Suppose we have taken $N$ real-life samples of the input variables and their corresponding drag-force, $F_d$. Let each sample of the system under various operating conditions form row of a matrix $\mathbf{X} \in \mathbb{R}^{N \times 4}$ for the inputs and a matrix $\mathbf{Y} \in \mathbb{R}^N$ for their corresponding outputs: 
+Now suppose we have 100 experimental observations of various angles of attack, air-densities and velocities with the corresponding drag-force in a pandas DataFrame called `df`: 
 
-$$ \mathbf{X} = \begin{bmatrix} 1 & \alpha_1 & \rho_1 & v_1 \\ 1 & \alpha_2 & \rho_2 & v_2 \\ & & \vdots & \\ 1 & \alpha_N & \rho_N & v_N \end{bmatrix} , \mathbf{Y} = \begin{bmatrix} F_{d1} \\ F_{d2} \\ \vdots \\ F_{d3} \end{bmatrix} $$ 
+```{python}
+#| echo: false
+import numpy as np 
+import matplotlib.pyplot as plt 
+import pandas as pd
+import math
 
- 
-We can efficiently compute the predictions of $h(\mathbf{X}; \beta)$ with a simple matrix-vector multiplication:  -->
+np.random.seed(42)
 
-<!-- $$ \hat{\mathbf{Y}} = \mathbf{X} \beta = \begin{bmatrix} 1 & \alpha_1 & \rho_1 & v_1 \\ 1 & \alpha_2 & \rho_2 & v_2 \\ & & \vdots & \\ 1 & \alpha_N & \rho_N & v_N \end{bmatrix} \begin{bmatrix} \beta_0 \\ \beta_1 \\ \beta_2 \\ \beta_3 \end{bmatrix} = \begin{bmatrix}  \beta_0 + \beta_1 \alpha_1 + \beta_2 \rho_1 + \beta_3 v_1 \\ \beta_0 + \beta_1 \alpha_2 + \beta_2 \rho_2 + \beta_3 v_2  \\ \vdots \\ \beta_0 + \beta_1 \alpha_N + \beta_2 \rho_N + \beta_3 v_N \end{bmatrix}  \in \mathbb{R}^N $$  -->
+def Cd(alpha):
+    return 0.1 * np.exp(math.pi / 180.0 * alpha)
 
+def Fd(alpha, rho, v):
+    C_d = Cd(alpha)
+    A = 1.2 # m^2 
+    return 0.5*rho*alpha*v**2*C_d +1
 
-<!-- Our goal is to adjust the parameters $\beta$ so that our predictions, $\hat{\mathbf{Y}}$, are as close to the true outputs, $\mathbf{Y}$ as possible. One way to measure prediction error is with Mean Squared Error: 
+N = 100
+alpha = np.random.rand(N)*45
+rho = np.random.randn(N)*0.3 + 1.293 
+v = np.random.rand(N)*100
+F_d = Fd(alpha, rho, v) + 0*np.random.randn(N)
 
-$$ \text{MSE} = \frac{1}{N} \sum_{i=1}^N (\hat{y}_i - y_i)^2 = \frac{1}{N} || \hat{\mathbf{Y}} - \mathbf{Y}||_2^2 = \frac{1}{N} || \mathbf{X} \beta - \mathbf{Y} ||_2^2 $$ 
+df_dict = {
+    "alpha":alpha,
+    "rho":rho,
+    "velocity":v, 
+    "f_drag":F_d
+}
 
-the $\frac{1}{N}$ is only a scalar, we wish to choose the value of $\beta$ that minimizes the following loss-function: 
+df = pd.DataFrame(df_dict)
+```
 
-$$ L(\beta) = ||\mathbf{X} \beta - \mathbf{Y}||_2^2 $$
+```{python}
+df.head()
+```
 
-## Solving the Least-Squares Problem -->
+We can create $\mathbf{X}$ and $\mathbf{Y}$ matrices by extracting the input features and outputs from the dataframe: 
 
-<!-- Because the squared 2-Norm can be rewritten as an inner product, we can rewrite this loss-function as: 
+```{python}
+X = np.hstack((np.ones((N, 1)), df[['alpha', 'rho', 'velocity']].values))
+Y = df['f_drag'].values
+```
 
-$$ L(\beta) = ||\mathbf{X} \beta - \mathbf{Y}||_2^2= (\mathbf{X} \beta - \mathbf{Y})^\top (\mathbf{X} \beta - \mathbf{Y}) $$
-$$ = (\beta^\top \mathbf{X}^\top - \mathbf{Y}^\top) (\mathbf{X} \beta - \mathbf{Y}) $$
+We can solve for $\hat{\beta}$ by computing the normal equations: 
 
-$$ = \beta^\top \mathbf{X^\top X} \beta - 2 \beta^\top \mathbf{X^\top \mathbf{Y}} + \mathbf{Y^\top Y}$$ -->
+```{python}
+beta_hat = np.linalg.inv(X.T @ X) @ (X.T @ Y)
+```
 
-<!-- As we learned in multivariable calculus, to find a the extrema of a continuous function, we need to identify the critical points of the function. This means setting the gradient of the loss-function equal to the zero-vector:
+And then compute the model's predictions at the training inputs: 
 
-$$ \nabla L_\beta = 2 \mathbf{X^\top X} \beta - 2 \mathbf{X^\top Y} = \mathbf{0}$$ 
+```{python}
+Y_hat = X @ beta_hat
+```
 
-Solving this equation for $\beta$ yields only one critical point: 
+Now let's plot the $\hat{\mathbf{Y}}$ and $\mathbf{Y}$ to examine how closely correlated the two are. A straight line with slope-1 would mean the model exactly fitted all of the outputs: 
 
-$$ \hat{\beta} = (\mathbf{X^\top X})^{-1} \mathbf{X^\top Y} $$ 
+```{python}
+plt.figure(figsize=(8,4))
+plt.scatter(Y, Y_hat)
+plt.grid()
+plt.xlabel("True Drag Force")
+plt.ylabel("Model Predicted Drag Force")
+```
 
-To check whether this point is a local minimum, maximum, or neither, we examine the nature of the Hessian: 
+There is clearly a strong, but nonlinear correlation between the true and model-predicted drag-force. This indicates that there is a nonlinear relationship between the features and the output values. Let us quantify the MSE: 
 
-$$ \nabla^2 L_\beta = 2 \mathbf{X^\top X} $$ 
-
-Because the Hessian is symmetric positive semidefinite and does not depend on $\beta$, this means that $L(\beta)$ is convex everywhere. Hence, $\hat{\beta}$ must be a global local minimum.  -->
+```{python}
+linear_mse = np.linalg.norm(Y_hat - Y, 2) / N
+print("Linear Features Mean-Squared Error: %.2f" % (linear_mse))
+``` -->
 
 
 ## Assessing the learned models
