--- a/notes/11_ls.qmd
+++ b/notes/11_ls.qmd
@@ -105,9 +105,39 @@ Note that we use $\beta$ to denote the unknown parameters in both $f^{(1)}$ and 
 :::
 
 
-### Example 2: something else
+### Example 2: Monitoring the Maximum Displacement of a Bridge
 
-### Example 3: something else
+Least-squares regression is a powerful tool for estimating unknown quantities in many scientific and engineering disciplines beyond Aerospace. Let's instead say we are interested in accurately estimating the maximum displacement at the midpoint of a bridge under various input-conditions measured by sensors along the bridge. Suppose we can accurately gather the following inputs: 
+
+* $L$ - **Load (kN):** The total weight applied to the bridge, measured through load cells at the entry and exit of the bridge. 
+* $T$ - **Temperature (C):** the temperature at the midpoint of the bridge, measured through thermocouple sensors. 
+* $f$ - **Frequency (Hz):** the dominant frequency present in the bridge, measured through accelerometers. 
+
+We are interested in quickly estimating the **Maximum Displacement (mm)**, $D$, from these parameters. As we can see, the context of our problem has changed entirely, but we can still fit it into our existing framework by defining the input vector $z=(L, T, f)^\top$ and output $y=D$. If we take $N$ measurements throughout the year under various environmental conditions, we can again form some training dataset $\{(z_i, y_i)\}_{i=1}^N$ which we can use to define some feature-set $x(z)$ and then solve for the optimal weights that map $x(z)$ to $y$ identically to how we did in **Example 1**.  
+
+### Example 3: Detecting Cardiac Arrhythmia using Health-Monitoring Devices 
+
+Many health issues are often difficult to detect without extensive testing. However, with the increase in biometric data available from devices such as smartphones and smart-watches, it has become increasingly feasible to predict disease by leveraging this information. According to Johns Hopkins, "an arrhythmia is an abnormality in the timing or pattern of the heartbeat," which can be life-threatening. Let's now suppose we have developed a smart-watch that gathers the following health-data from its user: 
+
+* $v$ - **Heartrate Variability (ms):** This is the variation in time between consecutive heart beats. If this value is low, it can be an indicator of stress or irregular heart conditions. 
+* $r$ - **Resting Heart Rate (beats per minute):** the rate at which someone's heart beats in the absence of activity. 
+* $b$ - **Respiratory Rate (breaths per minute):** the rate at which someone breathes. 
+
+And suppose we are interested in the *probability* that a patient has an arrhythmia. 
+
+::: {.callout-note}
+## Estimating categorical outputs
+Note that in this scenario, the patient either has an arrhythmia or does not. This is different from when we sought to estimate a continuous quantity like drag-force or the maximum displacement of a bridge. This is an example of a **classification** problem: problems in which the outputs belong to a specific category rather than a continuous numerical value. To represent such outcomes, we need to assign discrete numeric values (usually a 0 or a 1) to the training outputs to indicate whether or not something has occurred. In this case, we might assign a 0 when a patient does not have an arrhythmia and a 1 when the patient does have an arrhythmia. Because linear regression is a continuous estimator (i.e. it will always output a numerical value instead of exactly 0 or 1), we can interpret the output as the *probability* of a 1. 
+:::
+
+Let's say we have a large sample of many patients of various ages and demographics who have worn our smart-watch for a long period of time. For the $i$ th patient, suppose we have $v_i$, $r_i$ and $b_i$ collected from the device and we know whether or not they have a heart arrhythmia or not. Let's define each training output $y_i$ as the following: 
+
+$$ 
+y_i = \begin{cases} 1, \text{ patient has arrhythmia} \\ 0, \text{ patient has no arrhythmia} \end{cases}
+$$
+
+Even though these outputs are discrete/categorical, our training process is identical. We form a training dataset, $\{(z_i, y_i)\}_{i=1}^N$ and solve the least-squares regression problem using the discrete values for $y$ exactly how we did in **Example 1**. However, now when our model attempts to map $x(z)$ to $y$, it will give the best estimate for whether the output should be a 0 or a 1. Naturally, the model will have some uncertainty for inputs it has never seen before and will likely output a number *around* this range. Let's suppose we feed our trained model some unseen $z_{\text{new}}$ (e.g. a patient not in the training data), then form $x(z_{\text{new}})$, and lastly find that $x(z_{\text{new}})^\top \beta = 0.86$. This indicates a high probability of this patient having an arrhythmia, which may be vital information to relay to the patient or healthcare provider. This simple example shows how these machine learning algorithms can have a direct impact on the quality of human life. 
+
 
 ## Solving linear least squares problems
 
@@ -154,16 +184,21 @@ $$
 $$
 
 and this choice of $\beta$ defines our final learned model: $f(z;\beta^*) = x(z)^\top\beta^*$.
-<!-- 
-Now suppose we have 100 experimental observations of various angles of attack, air-densities and velocities with the corresponding drag-force in a pandas DataFrame called `df`: 
 
+### Using Python for Least-Squares Regression
+
+Now let's explore how we can actually solve for our optimal weights, $\beta^*$, given some training data with code. First, we need to import the libraries we need to work with matrices/vectors (`numpy`), plot results (`matplotlib`), work with dataframes (`pandas`), and easily perform more math than base python allows like $\pi$, sines, cosines, and square-roots (`math`). 
 ```{python}
-#| echo: false
 import numpy as np 
 import matplotlib.pyplot as plt 
 import pandas as pd
 import math
+```
 
+Now let's say we've imported some pandas dataframe called `df` that contains a set of empirical data from **Example 1** (Assume it comes from experimental trials or simulations). We can print the first few rows of the dataset using the `df.head()` method: 
+
+```{python}
+#| echo: false
 np.random.seed(42)
 
 def Cd(alpha):
@@ -194,26 +229,28 @@ df = pd.DataFrame(df_dict)
 df.head()
 ```
 
-We can create $\mathbf{X}$ and $\mathbf{Y}$ matrices by extracting the input features and outputs from the dataframe: 
+Let's define our input features as $x(z) = (\alpha, \rho, v)^\top$. We can now form $\bX$ (our training inputs) and $\bY$ (our training outputs) matrices by extracting the input features and outputs from the dataframe: 
 
 ```{python}
-X = np.hstack((np.ones((N, 1)), df[['alpha', 'rho', 'velocity']].values))
+# The hstack method concatenates column vectors into 
+# an N x d matrix like [1 alpha rho velocity]
+X = np.hstack((np.ones((N, 1)), df[['alpha', 'rho', 'velocity']].values)).T 
 Y = df['f_drag'].values
 ```
 
-We can solve for $\hat{\beta}$ by computing the normal equations: 
+We can solve for $\beta^*$ using the `np.linalg.lstsq()` function which efficiently solves the least-squares equation $\bX^\top \beta = \bY$. The `rcond` keyword argument specifies how "well-conditioned" we want our result to be, achieved by cutting off the smallest singular values of $\bX$ (don't worry too much about this for now). Setting it to `None` assumes $\bX$ is well-conditioned i.e. far from being rank-deficient. By default, the `lstsq()` function returns a list of the optimal weights, $\beta^*$, the residuals of the training data ($\bX^\top \beta - \bY$), the rank of $\bX^\top$, and the singular values of $\bX^\top$. For now, we're only interested in $\beta^*$, so we use `[0]` to select this value.  
 
 ```{python}
-beta_hat = np.linalg.inv(X.T @ X) @ (X.T @ Y)
+beta_hat = np.linalg.lstsq(X.T, Y, rcond=None)[0]
 ```
 
-And then compute the model's predictions at the training inputs: 
+We are now able to compute the model's predictions at the training inputs: 
 
 ```{python}
-Y_hat = X @ beta_hat
+Y_hat = X.T @ beta_hat
 ```
 
-Now let's plot the $\hat{\mathbf{Y}}$ and $\mathbf{Y}$ to examine how closely correlated the two are. A straight line with slope-1 would mean the model exactly fitted all of the outputs: 
+Let's now plot $\hat{\mathbf{Y}}$ and $\mathbf{Y}$ to examine how closely correlated the two are. A straight line with slope 1 would mean the linear regression model exactly matched all of the training outputs: 
 
 ```{python}
 plt.figure(figsize=(8,4))
@@ -223,12 +260,7 @@ plt.xlabel("True Drag Force")
 plt.ylabel("Model Predicted Drag Force")
 ```
 
-There is clearly a strong, but nonlinear correlation between the true and model-predicted drag-force. This indicates that there is a nonlinear relationship between the features and the output values. Let us quantify the MSE: 
-
-```{python}
-linear_mse = np.linalg.norm(Y_hat - Y, 2) / N
-print("Linear Features Mean-Squared Error: %.2f" % (linear_mse))
-``` -->
+This plot shows that there is clearly a strong, but nonlinear relationship between the true and model-predicted drag-force. We observe that the linear regression model under-predicts the drag-force when the true force is very low or very high and the model over-predicts the drag-force when the true force is around 5000N. This shows that when the relationship between the input features and the output is nonlinear, linear regression may provide good estimates on average, but choosing features to better capture this nonlinearity may provide much more accurate outputs over the entire input domain. 
 
 
 ## Assessing the learned models
